[package]
name = "zenoh-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.22" }
prost = { version = "0.13.3" }
tokio = { version = "1.40.0" }
zenoh = { version = "=1.0.0-beta.3" }

[dev-dependencies]
env_logger = { version = "0.11.5" }
criterion = { version = "0.5.1" }

[[bench]]
name = "zenoh_benchmark"
harness = false
